# glyphforge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/glyphforge/: cli.py  templates.py
tests/: test_cli.py
